@startuml foco 

class Usuario

class Foco{
    -EstadoFoco estado
    +Encender()
    +Apagar()
    +LeerEstado() : EstadoFoco
}

class EstadoFoco
class SerieFocos{
    -Foco focos[10]
    +MostrarFocos()
    +ApagarFocos()
}

Usuario o-- Foco 
Foco *-- EstadoFoco 
Estadofoco --|> Texto
SerieFocos "1" +-- "10" Foco
Usuario o-- SerieFocos

@enduml 